--- a/index.html
+++ b/index.html
@@ -1,92 +1,163 @@
-<script>
-  async function loadForecast() {
-    const adm4 = document.getElementById("adm4").value.trim();
-    const url = `https://api.bmkg.go.id/publik/prakiraan-cuaca?adm4=${adm4}`;
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <title>Prakiraan Cuaca BMKG</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    table { border-collapse: collapse; margin-top: 15px; width: 100%; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+    th { background: #f0f0f0; }
+    #chartContainer { margin-top: 30px; }
+    .input-box { margin-bottom: 15px; }
+    #meta { margin: 15px 0; padding: 10px; background: #eef; border-radius: 6px; }
+    #titleArea { margin-top:20px; font-size:18px; font-weight:bold; }
+  </style>
+</head>
+<body>
+  <h2>Prakiraan Cuaca BMKG</h2>
 
-    try {
-      const res = await fetch(url);
-      const json = await res.json();
+  <div class="input-box">
+    <label for="adm4">Kode ADM4:</label>
+    <input type="text" id="adm4" value="34.02.07.2001" size="20">
+    <button onclick="loadForecast()">Load Data</button>
+  </div>
 
-      // tampilkan JSON mentah buat debug
-      document.getElementById("rawData").textContent = JSON.stringify(json, null, 2);
+  <!-- metadata wilayah -->
+  <div id="meta"></div>
+  <div id="titleArea"></div>
 
-      const wilayah = json.data?.[0];  // ambil data pertama
-      const lokasi = wilayah?.lokasi; // metadata wilayah
-      const data = wilayah?.cuaca;
+  <div id="forecastTable"></div>
 
-      console.log("Lokasi:", lokasi); // DEBUG ke console
+  <div id="chartContainer">
+    <canvas id="tempChart" height="120"></canvas>
+    <canvas id="humChart" height="120"></canvas>
+  </div>
 
-      // ===== Metadata Wilayah =====
-      if (lokasi) {
-        const prov = lokasi.provinsi || "-";
-        const kotkab = lokasi.kotkab || "-";
-        const kec = lokasi.kecamatan || "-";
-        const desa = lokasi.desa || "-";
+  <pre id="rawData" style="background:#f9f9f9; padding:10px; margin-top:20px; max-height:300px; overflow:auto;"></pre>
 
-        document.getElementById("meta").innerHTML = `
-          <b>Provinsi:</b> ${prov} <br>
-          <b>Kabupaten/Kota:</b> ${kotkab} <br>
-          <b>Kecamatan:</b> ${kec} <br>
-          <b>Desa/Kelurahan:</b> ${desa}
+  <script>
+    async function loadForecast() {
+      const adm4 = document.getElementById("adm4").value.trim();
+      const url = `https://api.bmkg.go.id/publik/prakiraan-cuaca?adm4=${adm4}`;
+
+      try {
+        const res = await fetch(url);
+        const json = await res.json();
+
+        // tampilkan JSON mentah buat debug
+        document.getElementById("rawData").textContent = JSON.stringify(json, null, 2);
+
+        const wilayah = json.data?.[0];  // ambil data pertama
+        const lokasi = wilayah?.lokasi; // metadata wilayah
+        const data = wilayah?.cuaca;
+
+        console.log("Lokasi:", wilayah); // DEBUG ke console
+
+        // ===== Metadata Wilayah (fix field) =====
+        if (wilayah) {
+          const prov = lokasi.provinsi || "-";
+          const kotkab = lokasi.kotkab || "-";
+          const kec = lokasi.kecamatan || "-";
+          const desa = lokasi.desa || "-";
+
+          document.getElementById("meta").innerHTML = `
+            <b>Provinsi:</b> ${prov} <br>
+            <b>Kabupaten/Kota:</b> ${kotkab} <br>
+            <b>Kecamatan:</b> ${kec} <br>
+            <b>Desa/Kelurahan:</b> ${desa}
+          `;
+
+          // judul otomatis
+          document.getElementById("titleArea").innerHTML = 
+            `Prakiraan Cuaca untuk ${desa}, ${kec}, ${kotkab}`;
+        } else {
+          document.getElementById("meta").innerHTML = "<p>Data wilayah tidak tersedia.</p>";
+          document.getElementById("titleArea").innerHTML = "";
+        }
+
+        if (!data) {
+          document.getElementById("forecastTable").innerHTML = "<p>Tidak ada data prakiraan.</p>";
+          return;
+        }
+
+        // Flatten array cuaca
+        const flatData = data.flat();
+
+        // ===== Tabel Cuaca =====
+        let html = `
+          <table>
+            <thead>
+              <tr>
+                <th>Waktu Lokal</th>
+                <th>Suhu (°C)</th>
+                <th>Kelembapan (%)</th>
+                <th>Cuaca</th>
+                <th>Icon</th>
+              </tr>
+            </thead>
+            <tbody>
         `;
 
-        // judul otomatis
-        document.getElementById("titleArea").innerHTML = 
-          `Prakiraan Cuaca untuk ${desa}, ${kec}, ${kotkab}`;
-      } else {
-        document.getElementById("meta").innerHTML = "<p>Data wilayah tidak tersedia.</p>";
-        document.getElementById("titleArea").innerHTML = "";
-      }
-
-      if (!data) {
-        document.getElementById("forecastTable").innerHTML = "<p>Tidak ada data prakiraan.</p>";
-        return;
-      }
-
-      // Flatten array cuaca
-      const flatData = data.flat();
-
-      // ===== Tabel Cuaca =====
-      let html = `
-        <table>
-          <thead>
+        flatData.forEach(item => {
+          html += `
             <tr>
-              <th>Waktu Lokal</th>
-              <th>Suhu (°C)</th>
-              <th>Kelembapan (%)</th>
-              <th>Cuaca</th>
-              <th>Icon</th>
+              <td>${item.local_datetime}</td>
+              <td>${item.t}</td>
+              <td>${item.hu}</td>
+              <td>${item.weather_desc}</td>
+              <td><img src="${item.image}" width="40"></td>
             </tr>
-          </thead>
-          <tbody>
-      `;
+          `;
+        });
 
-      flatData.forEach(item => {
-        html += `
-          <tr>
-            <td>${item.local_datetime}</td>
-            <td>${item.t}</td>
-            <td>${item.hu}</td>
-            <td>${item.weather_desc}</td>
-            <td><img src="${item.image}" width="40"></td>
-          </tr>
-        `;
-      });
+        html += "</tbody></table>";
+        document.getElementById("forecastTable").innerHTML = html;
 
-      html += "</tbody></table>";
-      document.getElementById("forecastTable").innerHTML = html;
+        // ===== Grafik Suhu & Kelembapan =====
+        const labels = flatData.map(d => d.local_datetime);
+        const suhu = flatData.map(d => d.t);
+        const hum = flatData.map(d => d.hu);
 
-      // ===== Grafik Suhu & Kelembapan =====
-      const labels = flatData.map(d => d.local_datetime);
-      const suhu = flatData.map(d => d.t);
-      const hum = flatData.map(d => d.hu);
+        renderChart("tempChart", "Suhu (°C)", labels, suhu, "rgba(255,99,132,0.7)");
+        renderChart("humChart", "Kelembapan (%)", labels, hum, "rgba(54,162,235,0.7)");
 
-      renderChart("tempChart", "Suhu (°C)", labels, suhu, "rgba(255,99,132,0.7)");
-      renderChart("humChart", "Kelembapan (%)", labels, hum, "rgba(54,162,235,0.7)");
-
-    } catch (err) {
-      console.error(err);
-      document.getElementById("forecastTable").innerHTML = "<p>Error mengambil data.</p>";
+      } catch (err) {
+        console.error(err);
+        document.getElementById("forecastTable").innerHTML = "<p>Error mengambil data.</p>";
+      }
     }
-  }
-</script>
+
+    let chartInstances = {};
+    function renderChart(canvasId, label, labels, data, color) {
+      if (chartInstances[canvasId]) chartInstances[canvasId].destroy();
+
+      const ctx = document.getElementById(canvasId).getContext("2d");
+      chartInstances[canvasId] = new Chart(ctx, {
+        type: "line",
+        data: {
+          labels: labels,
+          datasets: [{
+            label: label,
+            data: data,
+            borderColor: color,
+            backgroundColor: color,
+            fill: false,
+            tension: 0.3
+          }]
+        },
+        options: {
+          responsive: true,
+          scales: {
+            x: { ticks: { maxRotation: 90, minRotation: 45 } }
+          }
+        }
+      });
+    }
+
+    // load pertama kali
+    loadForecast();
+  </script>
+</body>
+</html>
