--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   <h2>Prakiraan Cuaca BMKG</h2>
 
   <div class="input-box">
-    <label for="adm4">Kode ADM4:</label>
-    <input type="text" id="adm4" value="34.02.07.2001" size="20">
+    <label for="adm4">Kode Desa :</label>
+    <input type="text" id="adm4" vale="34.02.07.2001" size="20">
     <button onclick="loadForecast()">Load Data</button>
   </div>
 
