--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     .input-box { margin-bottom: 15px; }
     #meta { margin: 15px 0; padding: 10px; background: #eef; border-radius: 6px; }
     #titleArea { margin-top:20px; font-size:18px; font-weight:bold; }
+    #rawData {
+      display: none;
+    }
   </style>
 </head>
 <body>
