--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         margin-bottom: 20px; 
     }
     .input-box { margin-bottom: 15px; }
-    #meta { margin: 15px 0; padding: 10px; background: #eef; border-radius: 6px; }
+    #meta { margin: 15px 0; padding: 10px; background: #eef; border-radius: 6px; display: none; }
     #titleArea { margin-top:20px; font-size:18px; font-weight:bold; }
     #rawData {
       display: none;
