--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <canvas id="humChart" height="120"></canvas>
     </div>
   </div>
-
+<iframe width="650" height="450" src="https://embed.windy.com/embed.html?type=map&location=coordinates&metricRain=mm&metricTemp=°C&metricWind=m/s&zoom=8&overlay=radar&product=radar&level=surface&lat=-7.466&lon=109.935" frameborder="0"></iframe>
   <pre id="rawData" style="background:#f9f9f9; padding:10px; margin-top:20px; max-height:300px; overflow:auto;"></pre>
 
   <script>
