--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <div class="input-box">
     <label for="adm4">Kode Desa :</label>
-    <input type="text" id="adm4" vale="34.02.07.2001" size="20">
+    <input type="text" id="adm4" value ="34.02.07.2001" size="20">
     <button onclick="loadForecast()">Load Data</button>
   </div>
 
