--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     
     <!-- Bagian kanan: Chart -->
     <div class="chart-section">
-      <iframe width="650" height="450" src="https://embed.windy.com/embed.html?type=map&location=coordinates&metricRain=mm&metricTemp=°C&metricWind=m/s&zoom=8&overlay=radar&product=radar&level=surface&lat=-7.466&lon=109.935" frameborder="0"></iframe>
+      <iframe  height="450" src="https://embed.windy.com/embed.html?type=map&location=coordinates&metricRain=mm&metricTemp=°C&metricWind=m/s&zoom=8&overlay=radar&product=radar&level=surface&lat=-7.466&lon=109.935" frameborder="0"></iframe>
       <canvas id="tempChart" height="120"></canvas>
       <canvas id="humChart" height="120"></canvas>
     </div>
