--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
     
     <!-- Bagian kanan: Chart -->
     <div class="chart-section">
-      <iframe  height="450" src="https://embed.windy.com/embed.html?type=map&location=coordinates&metricRain=mm&metricTemp=°C&metricWind=m/s&zoom=8&overlay=radar&product=radar&level=surface&lat=-7.466&lon=109.935" frameborder="0"></iframe>
+      <iframe  width= "100%" height="450" src="https://embed.windy.com/embed.html?type=map&location=coordinates&metricRain=mm&metricTemp=°C&metricWind=m/s&zoom=8&overlay=radar&product=radar&level=surface&lat=-7.466&lon=109.935" frameborder="0"></iframe>
+      <iframe width="650" height="187" src="https://embed.windy.com/embed.html?type=forecast&location=coordinates&detail=true&detailLat=-7.8095&detailLon=110.3705&metricTemp=default&metricRain=default&metricWind=default" frameborder="0"></iframe>
       <canvas id="tempChart" height="120"></canvas>
       <canvas id="humChart" height="120"></canvas>
     </div>
