--- a/index.html
+++ b/index.html
@@ -2,91 +2,108 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Prakiraan Cuaca BBWS Serayu Opak</title>
+  <title>Prakiraan Cuaca Per Kabupaten</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <style>
-    body { font-family: Arial; }
-    #map { height: 400px; width: 60%; float:left; }
-    #table { width: 35%; float:right; }
-    table { border-collapse: collapse; width: 100%; }
-    th, td { border: 1px solid #ccc; padding: 4px; font-size: 12px; }
-    .legend { clear: both; margin-top:10px; }
+    body { font-family: Arial; margin:0; padding:0; }
+    #map { height: 500px; width: 60%; float:left; }
+    #table { width: 38%; float:right; padding:10px; }
+    table { border-collapse: collapse; width: 100%; font-size: 12px; }
+    th, td { border: 1px solid #ccc; padding: 4px; text-align: center; }
+    th { background: #f0f0f0; }
   </style>
 </head>
 <body>
-  <h2>Prakiraan Cuaca Umum BBWS Serayu Opak</h2>
+  <h2 style="text-align:center">Prakiraan Cuaca Umum Per Kabupaten</h2>
   <div id="map"></div>
   <div id="table">
     <table id="forecastTable">
       <thead>
-        <tr><th>Jam</th><th>Cuaca</th><th>Suhu</th><th>Kelembapan</th></tr>
+        <tr>
+          <th>No</th>
+          <th>Kabupaten</th>
+          <th>Cuaca Dominan</th>
+          <th>Suhu (°C)</th>
+          <th>Kelembapan (%)</th>
+        </tr>
       </thead>
       <tbody></tbody>
     </table>
   </div>
-  <div class="legend">
-    <b>Legenda:</b><br>
-    <span style="background:green;color:white;">Hujan Ringan</span>: 0,5-20 mm/jam<br>
-    <span style="background:orange;">Hujan Sedang</span>: 20-50 mm/jam<br>
-    <span style="background:red;color:white;">Hujan Lebat</span>: 50-100 mm/jam<br>
-  </div>
-  <button onclick="exportGif()">Export GIF</button>
-  <div id="preview"></div>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gifshot/0.3.2/gifshot.min.js"></script>
   <script>
-    // Inisialisasi Peta
-    var map = L.map('map').setView([-7.7, 110.3], 9);
+    var map = L.map('map').setView([-7.5, 110], 8);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
-    // Contoh batas wilayah (dummy polygon di sekitar Yogyakarta)
-    var polygon = L.polygon([
-      [-7.9, 110.1],
-      [-7.9, 110.6],
-      [-7.5, 110.6],
-      [-7.5, 110.1]
-    ], {color: 'blue'}).addTo(map);
+    // Load GeoJSON batas kabupaten
+    fetch("batas_wilayah.geojson")
+      .then(res => res.json())
+      .then(geojson => {
+        L.geoJSON(geojson, {
+          style: { color:"blue", weight:1, fillOpacity:0.1 },
+          onEachFeature: (feature, layer) => {
+            layer.bindPopup(feature.properties.KABUPATEN);
+          }
+        }).addTo(map);
 
-    // Ambil data prakiraan BMKG (contoh kode ADM4 untuk Sleman = 3471090)
-    let url = "https://api.bmkg.go.id/publik/prakiraan-cuaca?adm4=3471090";
-
-    fetch(url)
-      .then(r => r.json())
-      .then(data => {
-        let prakiraan = data.data[0].cuaca; // ambil array prakiraan
-        let tbody = document.querySelector("#forecastTable tbody");
-        tbody.innerHTML = "";
-
-        prakiraan.slice(0,6).forEach(item => { // ambil 6 jam ke depan
-          let tr = document.createElement("tr");
-          tr.innerHTML = `<td>${item.jam}</td>
-                          <td>${item.weather_desc}</td>
-                          <td>${item.t}°C</td>
-                          <td>${item.hu}%</td>`;
-          tbody.appendChild(tr);
-        });
+        // Proses per kabupaten
+        processForecast(geojson);
       });
 
-    // Export GIF
-    async function exportGif(){
-      let frames = [];
-      for(let i=0;i<3;i++){ // ambil 3 frame demo
-        await new Promise(r => setTimeout(r, 500));
-        let canvas = await html2canvas(document.body);
-        frames.push(canvas.toDataURL("image/png"));
+    async function processForecast(geojson){
+      let tbody = document.querySelector("#forecastTable tbody");
+      let kabList = geojson.features;
+
+      let no = 1;
+      for (let kab of kabList){
+        let namaKab = kab.properties.KABUPATEN;
+        let adm4List = kab.properties.ADM4_LIST; 
+        // asumsi di GeoJSON ada array kode adm4 di properties.ADM4_LIST
+
+        let result = await aggregateKabupaten(adm4List);
+
+        let tr = document.createElement("tr");
+        tr.innerHTML = `<td>${no++}</td>
+                        <td>${namaKab}</td>
+                        <td>${result.cuaca}</td>
+                        <td>${result.suhu}</td>
+                        <td>${result.hum}</td>`;
+        tbody.appendChild(tr);
       }
-      gifshot.createGIF({
-        images: frames,
-        interval: 1,
-        gifWidth: 800,
-        gifHeight: 600
-      }, obj => {
-        if(!obj.error){
-          document.getElementById("preview").innerHTML = `<img src="${obj.image}"/>`;
+    }
+
+    // Fungsi agregasi
+    async function aggregateKabupaten(adm4List){
+      let allCuaca = [];
+      let allSuhu = [];
+      let allHum = [];
+
+      for (let kode of adm4List){
+        let url = `https://api.bmkg.go.id/publik/prakiraan-cuaca?adm4=${kode}`;
+        try {
+          let res = await fetch(url);
+          let json = await res.json();
+          let cuaca = json.data[0].cuaca[0]; // jam pertama
+          allCuaca.push(cuaca.weather_desc);
+          allSuhu.push(Number(cuaca.t));
+          allHum.push(Number(cuaca.hu));
+        } catch(e){
+          console.warn("Gagal fetch", kode, e);
         }
-      });
+      }
+
+      // Hitung mayoritas cuaca
+      let count = {};
+      allCuaca.forEach(c => { count[c] = (count[c]||0)+1 });
+      let cuacaDominan = Object.entries(count).sort((a,b)=>b[1]-a[1])[0][0];
+
+      // Rata-rata suhu & kelembapan
+      let avg = arr => arr.reduce((a,b)=>a+b,0)/arr.length;
+      let suhu = (avg(allSuhu)||0).toFixed(1);
+      let hum = (avg(allHum)||0).toFixed(1);
+
+      return {cuaca: cuacaDominan, suhu, hum};
     }
   </script>
 </body>
