--- a/index.html
+++ b/index.html
@@ -96,41 +96,52 @@
       }
     }
 
-    // Fungsi agregasi cuaca dari seluruh adm4 dalam satu kabupaten
-    async function aggregateKabupaten(adm4List){
-      let allCuaca = [];
-      let allSuhu = [];
-      let allHum = [];
+   // Fungsi agregasi cuaca dari seluruh adm4 dalam satu kabupaten
+async function aggregateKabupaten(adm4List){
+  let allCuaca = [];
+  let allSuhu = [];
+  let allHum = [];
 
-      for (let kode of adm4List){
-        let url = `https://api.bmkg.go.id/publik/prakiraan-cuaca?adm4=${kode}`;
-        try {
-          let res = await fetch(url);
-          let json = await res.json();
-          let cuaca = json.data[0].cuaca[0]; // jam pertama
+  for (let kode of adm4List){
+    let url = `https://api.bmkg.go.id/publik/prakiraan-cuaca?adm4=${kode}`;
+    try {
+      let res = await fetch(url);
+      if (!res.ok) {
+        console.warn("API BMKG error:", res.status, kode);
+        continue;
+      }
+      let json = await res.json();
+
+      if (json && json.data && json.data.length > 0) {
+        let cuacaArr = json.data[0].cuaca;
+        if (cuacaArr && cuacaArr.length > 0) {
+          let cuaca = cuacaArr[0]; // jam pertama
           allCuaca.push(cuaca.weather_desc);
           allSuhu.push(Number(cuaca.t));
           allHum.push(Number(cuaca.hu));
-        } catch(e){
-          console.warn("Gagal fetch", kode, e);
         }
       }
-
-      // Hitung mayoritas cuaca
-      let count = {};
-      allCuaca.forEach(c => { count[c] = (count[c]||0)+1 });
-      let cuacaDominan = allCuaca.length > 0
-        ? Object.entries(count).sort((a,b)=>b[1]-a[1])[0][0]
-        : "-";
-
-      // Rata-rata suhu & kelembapan
-      let avg = arr => arr.length ? arr.reduce((a,b)=>a+b,0)/arr.length : 0;
-      let suhu = (avg(allSuhu)||0).toFixed(1);
-      let hum = (avg(allHum)||0).toFixed(1);
-
-      return {cuaca: cuacaDominan, suhu, hum};
+    } catch(e){
+      console.warn("Gagal fetch", kode, e);
     }
+  }
+
+  // Hitung mayoritas cuaca
+  let cuacaDominan = "-";
+  if (allCuaca.length > 0) {
+    let count = {};
+    allCuaca.forEach(c => { count[c] = (count[c]||0)+1 });
+    cuacaDominan = Object.entries(count).sort((a,b)=>b[1]-a[1])[0][0];
+  }
+
+  // Rata-rata suhu & kelembapan
+  let avg = arr => arr.length ? arr.reduce((a,b)=>a+b,0)/arr.length : 0;
+  let suhu = (avg(allSuhu)||0).toFixed(1);
+  let hum = (avg(allHum)||0).toFixed(1);
+
+  return {cuaca: cuacaDominan, suhu, hum};
+}
+
   </script>
 </body>
 </html>
-
