--- a/index.html
+++ b/index.html
@@ -2,146 +2,78 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Prakiraan Cuaca Per Kabupaten</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <title>Prakiraan Cuaca Kabupaten</title>
   <style>
-    body { font-family: Arial; margin:0; padding:0; }
-    #map { height: 500px; width: 60%; float:left; }
-    #table { width: 38%; float:right; padding:10px; }
-    table { border-collapse: collapse; width: 100%; font-size: 12px; }
-    th, td { border: 1px solid #ccc; padding: 4px; text-align: center; }
-    th { background: #f0f0f0; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background: #f9f9f9;
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+    table {
+      border-collapse: collapse;
+      margin: 20px auto;
+      width: 80%;
+      background: #fff;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    th, td {
+      padding: 10px;
+      border: 1px solid #ccc;
+      text-align: center;
+    }
+    th {
+      background: #007bff;
+      color: #fff;
+    }
+    tr:nth-child(even) {
+      background: #f2f2f2;
+    }
   </style>
 </head>
 <body>
-  <h2 style="text-align:center">Prakiraan Cuaca Per Kabupaten</h2>
-  <div id="map"></div>
-  <div id="table">
-    <table id="forecastTable">
-      <thead>
-        <tr>
-          <th>No</th>
-          <th>Kabupaten</th>
-          <th>Cuaca Dominan</th>
-          <th>Suhu (°C)</th>
-          <th>Kelembapan (%)</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
+  <h1>Prakiraan Cuaca Kabupaten</h1>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Kabupaten</th>
+        <th>Cuaca</th>
+        <th>Suhu (°C)</th>
+        <th>Kelembapan (%)</th>
+      </tr>
+    </thead>
+    <tbody id="cuacaTable">
+      <tr><td colspan="4">Memuat data...</td></tr>
+    </tbody>
+  </table>
 
   <script>
-    var map = L.map('map').setView([-7.5, 110], 8);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-
-    // Load GeoJSON batas desa (adm4)
-    fetch("Batas_SO_kel.json")
+    fetch("prakiraan_kabupaten.json")
       .then(res => res.json())
-      .then(geojson => {
-        // tampilkan batas desa tipis
-        L.geoJSON(geojson, {
-          style: { color:"blue", weight:0.3, fillOpacity:0 }
-        }).addTo(map);
+      .then(data => {
+        let tbody = document.getElementById("cuacaTable");
+        tbody.innerHTML = ""; // kosongkan dulu
 
-        // Group per kabupaten (WADMKK)
-        let groupedKab = {};
-        geojson.features.forEach(f => {
-          let kab = f.properties.WADMKK;
-          if(!groupedKab[kab]) groupedKab[kab] = [];
-          groupedKab[kab].push(f);
-        });
-
-        // Gambar outline kabupaten (tanpa union, pakai featureGroup)
-        Object.entries(groupedKab).forEach(([kab, features]) => {
-          let kabLayer = L.featureGroup();
-          features.forEach(f => {
-            if (f.geometry) {
-              L.geoJSON(f, {style:{color:"black", weight:2, fillOpacity:0}})
-                .addTo(kabLayer);
-            }
-          });
-          kabLayer.addTo(map);
-          kabLayer.bindPopup("Kabupaten: " + kab);
-        });
-
-        // Siapkan daftar kode adm4 per kabupaten
-        let groupedAdm4 = {};
-        geojson.features.forEach(f => {
-          let kab = f.properties.WADMKK;
-          let kode = f.properties.KDEPUM;
-          if(!groupedAdm4[kab]) groupedAdm4[kab] = [];
-          groupedAdm4[kab].push(kode);
-        });
-
-        // Proses cuaca per kabupaten
-        processForecast(groupedAdm4);
-      });
-
-    async function processForecast(grouped){
-      let tbody = document.querySelector("#forecastTable tbody");
-      let no = 1;
-
-      for (let [kabupaten, adm4List] of Object.entries(grouped)){
-        let result = await aggregateKabupaten(adm4List);
-
-        let tr = document.createElement("tr");
-        tr.innerHTML = `<td>${no++}</td>
-                        <td>${kabupaten}</td>
-                        <td>${result.cuaca}</td>
-                        <td>${result.suhu}</td>
-                        <td>${result.hum}</td>`;
-        tbody.appendChild(tr);
-      }
-    }
-
-   // Fungsi agregasi cuaca dari seluruh adm4 dalam satu kabupaten
-async function aggregateKabupaten(adm4List){
-  let allCuaca = [];
-  let allSuhu = [];
-  let allHum = [];
-
-  for (let kode of adm4List){
-    let url = `https://api.bmkg.go.id/publik/prakiraan-cuaca?adm4=${kode}`;
-    try {
-      let res = await fetch(url);
-      if (!res.ok) {
-        console.warn("API BMKG error:", res.status, kode);
-        continue;
-      }
-      let json = await res.json();
-
-      if (json && json.data && json.data.length > 0) {
-        let cuacaArr = json.data[0].cuaca;
-        if (cuacaArr && cuacaArr.length > 0) {
-          let cuaca = cuacaArr[0]; // jam pertama
-          allCuaca.push(cuaca.weather_desc);
-          allSuhu.push(Number(cuaca.t));
-          allHum.push(Number(cuaca.hu));
+        for (let kab in data) {
+          let val = data[kab];
+          let row = `
+            <tr>
+              <td>${kab}</td>
+              <td>${val.cuaca}</td>
+              <td>${val.suhu ?? "-"}</td>
+              <td>${val.hum ?? "-"}</td>
+            </tr>`;
+          tbody.innerHTML += row;
         }
-      }
-    } catch(e){
-      console.warn("Gagal fetch", kode, e);
-    }
-  }
-
-  // Hitung mayoritas cuaca
-  let cuacaDominan = "-";
-  if (allCuaca.length > 0) {
-    let count = {};
-    allCuaca.forEach(c => { count[c] = (count[c]||0)+1 });
-    cuacaDominan = Object.entries(count).sort((a,b)=>b[1]-a[1])[0][0];
-  }
-
-  // Rata-rata suhu & kelembapan
-  let avg = arr => arr.length ? arr.reduce((a,b)=>a+b,0)/arr.length : 0;
-  let suhu = (avg(allSuhu)||0).toFixed(1);
-  let hum = (avg(allHum)||0).toFixed(1);
-
-  return {cuaca: cuacaDominan, suhu, hum};
-}
-
+      })
+      .catch(err => {
+        document.getElementById("cuacaTable").innerHTML =
+          `<tr><td colspan="4">Gagal memuat data: ${err}</td></tr>`;
+      });
   </script>
 </body>
 </html>
