--- a/index.html
+++ b/index.html
@@ -8,7 +8,87 @@
       font-family: Arial, sans-serif;
       margin: 20px;
       background: #f9f9f9;
+    }<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <title>Prakiraan Cuaca Kabupaten</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background: #f4f6f9;
     }
+    h1 { text-align: center; }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 40px;
+      background: #fff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 6px 10px;
+      text-align: center;
+    }
+    th {
+      background: #007acc;
+      color: #fff;
+      position: sticky;
+      top: 0;
+    }
+    .kabupaten {
+      background: #eee;
+      font-weight: bold;
+      text-align: left;
+    }
+  </style>
+</head>
+<body>
+  <h1>Prakiraan Cuaca Per Kabupaten (12 jam)</h1>
+  <div id="tables"></div>
+
+  <script>
+    async function loadData() {
+      const res = await fetch("prakiraan_semua_kabupaten_12jam.json");
+      const data = await res.json();
+      const container = document.getElementById("tables");
+
+      for (const kab in data) {
+        const slotData = data[kab];
+
+        let html = `<table>
+          <thead>
+            <tr><th colspan="4" class="kabupaten">${kab}</th></tr>
+            <tr>
+              <th>Waktu</th>
+              <th>Cuaca</th>
+              <th>Suhu (°C)</th>
+              <th>Kelembapan (%)</th>
+            </tr>
+          </thead>
+          <tbody>`;
+
+        for (const waktu in slotData) {
+          const val = slotData[waktu];
+          html += `<tr>
+            <td>${waktu}</td>
+            <td>${val.cuaca}</td>
+            <td>${val.suhu ?? "-"}</td>
+            <td>${val.hum ?? "-"}</td>
+          </tr>`;
+        }
+
+        html += `</tbody></table>`;
+        container.innerHTML += html;
+      }
+    }
+    loadData();
+  </script>
+</body>
+</html>
+
     h1 {
       text-align: center;
       color: #333;
